--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-# default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
-default_asides: [asides/recent_posts.html, asides/twitter.html, custom/asides/flickr.html]
+default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
 # blog_index_asides:
@@ -64,7 +63,7 @@ default_asides: [asides/recent_posts.html, asides/twitter.html, custom/asides/fl
 # ----------------------- #
 
 # Github repositories
-github_user:gukong
+github_user:
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
