--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://gukong.github.io
 title: My Octopress Blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: Nate
 simple_search: https://www.google.com/search
 description:
 
